--- a/frontend/src/app.module.css
+++ b/frontend/src/app.module.css
@@ -2,9 +2,13 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: 'Manrope', sans-serif;
 }
 :global body {
-    /*background-color: rgb(159, 159, 248);*/
+    background: linear-gradient(to right, #8E54E9 50%, #4776E6 100%); 
+}
+:global *:focus {
+    outline: none;
 }
 .particles {
     position: fixed;
