--- a/frontend/src/welcome.module.css
+++ b/frontend/src/welcome.module.css
@@ -1,23 +1,9 @@
-.flex {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.imgContainer {
-    width: 400px;
-    order: 2;
-    margin-left: 200px;
-}
-.img {
-    width: 100%;
-    height: auto;
-}
 .welcomeContainer {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    height: 100vh;
-    overflow: auto;
+    align-items: center;
+    height: 100%;
 }
 .welcomeHeader {
     font-size: 3.5rem;
@@ -30,6 +16,7 @@
     text-align: center;
     color: white;
     font-weight: 300;
+    margin-bottom: 15px;
 }
 .container {
     display: flex;
@@ -39,7 +26,7 @@
 }
 .welcomeBtn {
     padding: 10px 25px;
-    margin: 15px 30px;
+    margin: 0 30px;
     border-radius: 5px;
     border: 2px solid white;
     font-size: 1.2rem;
@@ -47,8 +34,74 @@
     color: white;
     font-weight: 600;
 }
+.signInBtn {
+    margin-left: 0;
+}
+.registerBtn {
+    margin-right: 0;
+}
 .welcomeBtn:hover {
     background-color: white;
     color: #7C5DE8;
     cursor: pointer;
+}
+@media (max-width: 1000px) {
+    .welcomeHeader {
+        font-size: 3.2rem; 
+    }
+    .welcomeSubheader {
+        font-size: 1.8rem;
+    }
+    .welcomeBtn {
+        font-size: 1.1rem; 
+    }
+}
+@media (max-width: 800px) {
+    .welcomeHeader {
+        font-size: 2.9rem; 
+    }
+    .welcomeSubheader {
+        font-size: 1.65rem;
+    }
+    .welcomeBtn {
+        padding: 8px 20px;
+    }
+}
+@media (max-width: 625px) {
+    .containerMobile {
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+    }
+    .welcomeBtnMobile {
+        margin: 0 0 10px 0;
+        order: -1;
+    }
+    .welcomeSubheader {
+        margin-bottom: 10px;
+    } 
+}
+@media (max-width: 500px) {
+    .welcomeHeader {
+        font-size: 2rem; 
+    }
+    .welcomeSubheader {
+        font-size: 1.4rem;
+    }
+    .welcomeBtn {
+        font-size: 1rem; 
+    }
+}
+@media (max-height: 500px) {
+    .welcomeContainerMobile {
+        justify-content: flex-start;
+        padding-top: 5px;
+        height: auto;
+    }
+    .welcomeHeader {
+        font-size: 2.4rem;
+    }
+    .welcomeSubheader {
+        font-size: 1.3rem;
+    }
 }
