--- a/frontend/src/form.module.css
+++ b/frontend/src/form.module.css
@@ -13,6 +13,13 @@
     border-bottom: 2px solid white;
     font-weight: 600;
 }
+.formIcon {
+    width: 30px;
+    height: 30px;
+    margin-left: 15px;
+    filter: invert(100%) sepia(0%) saturate(1%) hue-rotate(273deg) brightness(110%) contrast(102%);
+    vertical-align: middle;
+}
 .formLabel {
     display: block;
     margin: 10px 0 3px 0;
