--- a/frontend/src/home.module.css
+++ b/frontend/src/home.module.css
@@ -1,13 +1,17 @@
 .homeContainer {
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    height: 100%;
     justify-content: center;
     align-items: center;
 }
+.homeContainerImgClick {
+    justify-content: flex-start;
+    margin-top: 20px;
+}
 .logoutBtn {
     border-radius: 5px;
-    padding: 7px 15px;
+    padding: 7px 13px;
     position: absolute;
     right: 30px;
     top: 30px;
@@ -23,21 +27,23 @@
 }
 .homeHeader {
     font-size: 3rem;
-    margin-bottom: 20px;
+    margin: 0 20px 10px 20px;
     color: white;
     font-weight: 400;
+    text-align: center;
 }
 .homeSubheader {
     font-size: 1.2rem;
-    margin-bottom: 10px;
+    margin: 0 10px 10px 10px;
     color: white;
     font-weight: 400;
+    text-align: center;
 }
 .linkInput {
     width: 500px;
     padding: 10px;
     border: 2px solid white;
-    font-size: 1rem;
+    font-size: 1rem
 }
 .detectBtn {
     padding: 10px 15px;
@@ -59,4 +65,76 @@
     border-radius: 5px;
     color: white;
     margin-top: 5px;
+}
+@media (max-width: 1000px) {
+    .logoutBtn {
+        padding: 7px 10px;
+    } 
+    .homeHeader {
+        font-size: 2.5rem;
+    }
+}
+@media (max-width: 800px) {
+    .homeHeader {
+        font-size: 2.1rem;
+        margin-bottom: 5px; 
+    }
+    .homeSubheader {
+        font-size: 1.1rem;
+        margin-bottom: 10px;
+    }
+    .linkInput {
+        width: 70vw;
+        font-size: 0.9rem;
+    }
+    .detectBtn {
+        padding: 10px 15px;
+        font-size: 0.9rem;
+    }
+    .errorMsg {
+        font-size: 0.9rem;
+    }
+}
+@media (max-width: 600px) {
+    .homeHeader {
+        font-size: 1.8rem;
+    }
+    .homeSubheader {
+        font-size: 1rem;
+    }
+    .linkInput {
+        width: 70vw;
+        font-size: 0.85rem;
+        padding: 7px 10px;
+    }
+    .detectBtn {
+        padding: 7px 12px;
+        font-size: 0.85rem;
+    }
+    .logoutBtn {
+        padding: 5px 7px;
+    }
+    .errorMsg {
+        font-size: 0.8rem;
+    }
+}
+@media (max-width: 500px) {
+    .homeHeader {
+        font-size: 1.6rem;
+    }
+    .homeSubheader {
+        font-size: 0.95rem;
+    }
+    .detectBtn {
+        padding: 7px 8px;
+    }
+    .logoutBtn {
+        padding: 5px;
+        right: 20px;
+        top: 20px;
+    }
+    .homeContainerImgClick {
+        justify-content: flex-start;
+        margin-top: 50px;
+    }
 }
